--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,93 @@
-.thumbnail {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
+body { 
+  background-image: url('./assets/bug-background.jpg'); 
+  background-repeat: repeat; 
+  background-position: center; 
+  background-size: auto; 
 }
 
-.contact-info {
-  width: 350px;
-  padding-left: 1em;
+.container {
+  background-color: rgba(255, 255, 255, 0.8); 
+  max-width: 800px; 
+  margin: 0 auto; 
+  padding: 20px; 
+  position: relative; 
+  z-index: 1; 
+}
+
+.add-bug-container {
+  background-color: rgba(255, 255, 255, 0.8); 
+  max-width: 800px; 
+  margin: 0 auto; 
+  padding: 20px; 
+  border-radius: 10px; 
+  position: relative; 
+  z-index: 1; 
+}
+
+.transparent-container {
+  background-color: rgba(255, 255, 255, 0.8); 
+  padding: 20px; 
+  border-radius: 8px; 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+  max-width: 400px; 
+  margin: 20px auto; 
+}
+
+.delete-container {
+  background-color: rgba(255, 255, 255, 0.8); 
+  padding: 20px; 
+  border-radius: 8px; 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+  max-width: 800px; 
+  margin: 20px auto; 
+}
+
+.my-bugs-title {
+  padding: 30px 0; 
+  text-align: center;
+  color:rgb(80, 122, 76);
+}
+
+.add-bug-button {
+  background-color: #c3f1b7;
+  padding: 0.5rem;
+  margin-bottom: 30px; 
+  color: black;
+  text-decoration: none; 
+  border-radius: 10px; 
+  border: 4px solid rgb(125, 190, 118);
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.thumbnail {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%; 
+  border: 4px solid rgb(125, 190, 118);
+}
+
+.centered-image {
+  display: block;       
+  margin-left: auto;   
+  margin-right: auto;  
+  width: 160px;      
+  height: 160px;       
+  border-radius: 50%;  
+  border: 4px solid rgb(125, 190, 118); 
+}
+
+.card-title {
+  font-size: 1.6rem; 
+}
+
+.bug-info {
+  width: 500px;
+  padding-left: 1rem; 
+}
+
+.bug-list {
+  padding-top: 25px; 
 }
 
 .bug-image {
@@ -15,4 +96,8 @@
   border-radius: 50%; 
   object-fit: cover; 
   margin: 10px; 
+}
+
+.italic {
+  font-style: italic;
 }
